[gd_scene load_steps=6 format=3 uid="uid://chsjeg480dh74"]

[ext_resource type="Script" path="res://menus/level_select/level_select.gd" id="1_64m4c"]
[ext_resource type="Shader" path="res://shaders/wacky_scrolling.gdshader" id="1_pmo2e"]
[ext_resource type="Texture2D" uid="uid://bn8b2tcfs8ahe" path="res://images/backdrops/grid.png" id="2_72pqq"]
[ext_resource type="AudioStream" uid="uid://dn5rgoxohsuep" path="res://audio/sfx/Menu_Nav.wav" id="4_ve352"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gi1t0"]
shader = ExtResource("1_pmo2e")
shader_parameter/scroll_speed = 0.08

[node name="level_select" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_64m4c")

[node name="TextureRect" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_gi1t0")
offset_right = 320.0
offset_bottom = 180.0
scale = Vector2(4, 4)
texture = ExtResource("2_72pqq")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 112.0
offset_top = 50.0
offset_right = 1392.0
offset_bottom = 774.0
scale = Vector2(0.803911, 0.829032)
color = Color(0.215686, 0.215686, 0.215686, 0.776471)

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = 391.0
offset_top = 42.0
offset_right = 812.0
offset_bottom = 148.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 75
text = "Level Select"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 156.0
offset_top = 183.0
offset_right = 1176.0
offset_bottom = 525.0
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 30
columns = 5

[node name="level_1" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Level 1
"

[node name="level_2" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Level 2
"

[node name="level_3" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Level 3
"

[node name="level_4" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Level 4"

[node name="level_5" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Level 5
"

[node name="level_6" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Level 6"

[node name="level_7" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Level 7
"

[node name="level_8" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Level 8
"

[node name="level_9" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Level 9"

[node name="level_10" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Level 10
"

[node name="level_11" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Level 11
"

[node name="level_12" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Level 12
"

[node name="level_13" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Level 13
"

[node name="level_14" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Level 14"

[node name="level_15" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Level 15
"

[node name="level_16" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Level 16"

[node name="level_17" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Level 17
"

[node name="level_18" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Level 18
"

[node name="level_19" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Level 19"

[node name="level_20" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Level 20
"

[node name="back_button" type="Button" parent="."]
layout_mode = 0
offset_left = 933.0
offset_top = 560.0
offset_right = 1083.0
offset_bottom = 637.0
theme_override_font_sizes/font_size = 50
text = " Back "

[node name="test_level" type="Button" parent="."]
layout_mode = 0
offset_left = 155.0
offset_top = 559.0
offset_right = 403.0
offset_bottom = 636.0
theme_override_font_sizes/font_size = 50
text = "Test Level"

[node name="menu_noise" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ve352")

[connection signal="focus_entered" from="GridContainer/level_1" to="." method="_button_focus_entered"]
[connection signal="pressed" from="GridContainer/level_1" to="." method="_on_level_1_pressed"]
[connection signal="focus_entered" from="GridContainer/level_2" to="." method="_button_focus_entered"]
[connection signal="pressed" from="GridContainer/level_2" to="." method="_on_level_2_pressed"]
[connection signal="focus_entered" from="GridContainer/level_3" to="." method="_button_focus_entered"]
[connection signal="pressed" from="GridContainer/level_3" to="." method="_on_level_3_pressed"]
[connection signal="focus_entered" from="GridContainer/level_4" to="." method="_button_focus_entered"]
[connection signal="pressed" from="GridContainer/level_4" to="." method="_on_level_4_pressed"]
[connection signal="focus_entered" from="GridContainer/level_5" to="." method="_button_focus_entered"]
[connection signal="pressed" from="GridContainer/level_5" to="." method="_on_level_5_pressed"]
[connection signal="focus_entered" from="GridContainer/level_6" to="." method="_button_focus_entered"]
[connection signal="focus_entered" from="GridContainer/level_7" to="." method="_button_focus_entered"]
[connection signal="focus_entered" from="GridContainer/level_8" to="." method="_button_focus_entered"]
[connection signal="focus_entered" from="GridContainer/level_9" to="." method="_button_focus_entered"]
[connection signal="focus_entered" from="GridContainer/level_10" to="." method="_button_focus_entered"]
[connection signal="focus_entered" from="GridContainer/level_11" to="." method="_button_focus_entered"]
[connection signal="focus_entered" from="GridContainer/level_12" to="." method="_button_focus_entered"]
[connection signal="focus_entered" from="GridContainer/level_13" to="." method="_button_focus_entered"]
[connection signal="focus_entered" from="GridContainer/level_14" to="." method="_button_focus_entered"]
[connection signal="focus_entered" from="GridContainer/level_15" to="." method="_button_focus_entered"]
[connection signal="focus_entered" from="GridContainer/level_16" to="." method="_button_focus_entered"]
[connection signal="focus_entered" from="GridContainer/level_17" to="." method="_button_focus_entered"]
[connection signal="focus_entered" from="GridContainer/level_18" to="." method="_button_focus_entered"]
[connection signal="focus_entered" from="GridContainer/level_19" to="." method="_button_focus_entered"]
[connection signal="focus_entered" from="GridContainer/level_20" to="." method="_button_focus_entered"]
[connection signal="focus_entered" from="back_button" to="." method="_button_focus_entered"]
[connection signal="pressed" from="back_button" to="." method="_on_back_button_pressed"]
[connection signal="focus_entered" from="test_level" to="." method="_button_focus_entered"]
[connection signal="pressed" from="test_level" to="." method="_on_test_level_pressed"]
